# goldilock

./: .tipiignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: RELEASING.md
.github/workflows/: ci.yaml
.tipi/: deps
cmake/: gen_version.cmake
environments/: host-cxx17-linux-static.cmake  host-cxx17.cmake  linux-clang-14-cxx17-static.cmake  linux-clang-16-cxx17-static.cmake  linux-clang-cxx17-static.cmake  linux-tipi-clang-cxx17-static.cmake  macos-clang-cxx17-AddressSanitizer.cmake  macos-clang-cxx17.cmake  windows-msvc-cxx17.cmake
environments/compiler/: clang.cmake
environments/flags/: cxx17.cmake  vs-cxx17.cmake
environments/helpers/: clang-libcxx.cmake
include/goldilock/: file.hpp  fstream.hpp  goldilock_constants.hpp  goldilock_spot.hpp  process_info.hpp  random.hpp  string.hpp  version.hpp.in
include/handylock/: getppid.hpp
src/: CMakeLists.txt  goldilock.cpp  handylock.cpp
test/: CMakeLists.txt  support_app_append_to_file.cpp  support_app_deleter.cpp  support_app_exiter.cpp  support_app_launcher.cpp  test_basics.cpp  test_benchmark.cpp  test_docker.cpp  test_helpers.hpp  test_signals_robustness.cpp
test/Dockerfiles/minimal/: .gitignore  Dockerfile
